intTests/test_type_errors/err013.saw
// Trigger the "occurs check failure" message
//
// This is produced if type inference results in a type that contains
// itself.
//
// We can do this by doing something with a list and its element type
// that require them to be the same.
//
// See also err072. (If anyone ever renumbers the test dir, it might
// make sense to group these two together.)

let paste xs = concat (head xs) xs;
